tests/ui/traits/next-solver/unexpected-pointer-deref-issue-154568.stderr
error[E0284]: type annotations needed: cannot normalize `<_ as Role>::Inner`
  --> $DIR/unexpected-pointer-deref-issue-154568.rs:16:35
   |
LL |             let borrowed_inner = &hs.0;
   |                                   ^^^^ cannot normalize `<_ as Role>::Inner`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0284`.
